--- a/index.html
+++ b/index.html
@@ -607,24 +607,27 @@
               <tbody>
 
                   <tr>
-                      <span class="cvdate">2024.08&nbsp;-&nbsp;Present </span>
-                      <p>
-                        <!-- <img src="" alt="Logo" style="border:none;height:1.5rem;margin:0;padding:0"> -->
-                        <strong>ByteDance</strong>
-                        <span>Research Intern</span>
-                      </p>
-                      
+                      <td>
+                        <span class="cvdate">2024.08&nbsp;-&nbsp;Present </span>
+                        <p>
+                          <!-- <img src="" alt="Logo" style="border:none;height:1.5rem;margin:0;padding:0"> -->
+                          <strong>ByteDance</strong>
+                          <span style="float:right;margin-right:10em">Seed-LLM-Harizon (Doubao)</span>
+                          <br>
+                          <span>Research Intern</span>
+                        </p>
+                      </td>
                   </tr>
 
                   <tr>
-                    <span class="cvdate">2020.08&nbsp;-&nbsp;2021.09</span>
-                    <p>
-                      <!-- <img src="" alt="Logo" style="border:none;height:1.5rem;margin:0;padding:0"> -->
-                      <strong>The Chinese University of Hong Kong</strong>
-                      <span>Research Assistant</span>
-
-                    </p>
-
+                    <td>
+                      <span class="cvdate">2020.08&nbsp;-&nbsp;2021.09</span>
+                      <p>
+                        <!-- <img src="" alt="Logo" style="border:none;height:1.5rem;margin:0;padding:0"> -->
+                        <strong>The Chinese University of Hong Kong</strong>
+                        <span>Research Assistant</span>
+                      </p>
+                    </td>
                   </tr>
 
 
