--- a/publication/index.html
+++ b/publication/index.html
@@ -295,7 +295,7 @@
                           <a href="tbd">M3Sum: A Novel Unsupervised Language-guided Video Summarization</a> 
                           <img src="https://img.shields.io/badge/MM-red"> 
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
-                          <span class="author_list"><u>Hongru WANG*</strong>, Baohang Zhou*, Zhengkun Zhang, Yiming Du, David Ho, Kam-Fai Wong </span><br>
+                          <span class="author_list"><u>Hongru WANG*</u>, Baohang Zhou*, Zhengkun Zhang, Yiming Du, David Ho, Kam-Fai Wong </span><br>
                           <span><i>ICASSP 2024</i></span> <strong style="color:#bf0140"> (oral paper) </strong>
                         </div>
 
