--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
       -->
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href=""><strong>AppBench: Planning of Multiple APIs from Various APPs for Complex Instruction</strong></a> 
+          <a href="">AppBench: Planning of Multiple APIs from Various APPs for Complex Instruction</a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><u>Hongru WANG</u>, Rui Wang, Boyang XUE, Heming Xia, Jingtao Cao, Zeming Liu, Jeff Z. Pan, Kam-Fai Wong </span> <br>
@@ -366,7 +366,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/pdf/2309.16090.pdf"><strong>TPE: Towards Better Compositional Reasoning over Conceptual Tools ..</strong></a> 
+          <a href="https://arxiv.org/pdf/2309.16090.pdf">TPE: Towards Better Compositional Reasoning over Conceptual Tools ..</a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><u>Hongru WANG</u>, Huimin Wang, Lingzhi Wang, et. al, Kam-Fai Wong </span> <br>
@@ -375,7 +375,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://dl.acm.org/doi/10.1145/3626772.3661381"><strong>Empowering Large Language Models: Tool Learning for Real-World Interaction</strong></a> 
+          <a href="https://dl.acm.org/doi/10.1145/3626772.3661381">Empowering Large Language Models: Tool Learning for Real-World Interaction</a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><u>Hongru WANG</u>, Yujia Qin, Yankai Lin, Jeff Z. Pan and Kam-Fai Wong</span><br>
@@ -384,7 +384,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2305.13733.pdf"><strong>Enhancing Large Language Models Against Inductive Instructions with Dual-critique ..</strong></a> 
+          <a href="https://arxiv.org/abs/2305.13733.pdf">Enhancing Large Language Models Against Inductive Instructions with Dual-critique ..</a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Safety-red"> <br>
           <span class="author_list">Rui Wang*, <u>Hongru WANG</u>*, Fei Mi, Yi Chen, Boyang Xue, Kam-Fai Wong, Ruifeng Xu </span><br>
@@ -401,7 +401,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="/papers/uniretriever/universal_retrieval.pdf"><strong>UniRetriever: Multi-task Candidates Selection for Various Context-Adaptive ..</strong></a> 
+          <a href="/papers/uniretriever/universal_retrieval.pdf">UniRetriever: Multi-task Candidates Selection for Various Context-Adaptive ..</a> 
           <img src="https://img.shields.io/badge/DS-blue">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><u>Hongru WANG</u>, Boyang Xue, Baohang Zhou, Rui Wang, Fei Mi, Weichao Wang, Yasheng Wang, Kam-Fai Wong </span><br>
@@ -410,7 +410,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="tbd"><strong>M3Sum: A Novel Unsupervised Language-guided Video Summarization</strong></a> 
+          <a href="tbd">M3Sum: A Novel Unsupervised Language-guided Video Summarization</a> 
           <img src="https://img.shields.io/badge/MM-red"> 
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list"><u>Hongru WANG*</u>, Baohang Zhou*, Zhengkun Zhang, Yiming Du, David Ho, Kam-Fai Wong </span><br>
@@ -419,7 +419,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2310.08840.pdf"><strong>Large Language Models as Source Planner for Personalized ..</strong></a>
+          <a href="https://arxiv.org/abs/2310.08840.pdf">Large Language Models as Source Planner for Personalized ..</a>
           <img src="https://img.shields.io/badge/DS-blue">
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Minda Hu, Yang Deng, et. al, Irwin King, Kam-Fai Wong </span> <br>
@@ -432,7 +432,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2305.11792.pdf"><strong>Cue-CoT: Chain-of-thought Prompting for Responding to In-depth Dialogue ..</strong></a>
+          <a href="https://arxiv.org/abs/2305.11792.pdf">Cue-CoT: Chain-of-thought Prompting for Responding to In-depth Dialogue ..</a>
           <img src="https://img.shields.io/badge/DS-blue">
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list"><u>Hongru Wang*</u>, Rui Wang*, Fei Mi, Yang Deng, Zezhong Wang, Bin Liang, Ruifeng Xu, Kam-Fai Wong </span> <br>
@@ -444,7 +444,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2108.11635"><strong>MCML: A Novel Memory-based Contrastive Meta-Learning Method for Few Shot Slot Tagging</strong></a>
+          <a href="https://arxiv.org/abs/2108.11635">MCML: A Novel Memory-based Contrastive Meta-Learning Method for Few Shot Slot Tagging</a>
           <img src="https://img.shields.io/badge/DS-blue"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Zezhong Wang, Wai-Chung Kwan, Kam-Fai Wong </span> <br>
           <span><i>IJCNLP-AACL 2023</i> <strong style="color:#bf0140"> (oral) </strong></span>
@@ -453,7 +453,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2202.13675.pdf"><strong>A Survey on Recent Advances and Challenges in Reinforcement Learning Methods..</strong></a>
+          <a href="https://arxiv.org/abs/2202.13675.pdf">A Survey on Recent Advances and Challenges in Reinforcement Learning Methods..</a>
           <img src="https://img.shields.io/badge/DS-blue"> 
           <img src="https://img.shields.io/badge/RL-olive"> <br>
           <span class="author_list">Wai-Chung Kwan*, <u>Hongru WANG*</u>, Huimin Wang, Kam-Fai Wong </span> <br>
@@ -462,7 +462,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2111.01398.pdf"><strong>Integrating Pretrained Language Model for Dialogue Policy Learning</strong></a>
+          <a href="https://arxiv.org/abs/2111.01398.pdf">Integrating Pretrained Language Model for Dialogue Policy Learning</a>
           <img src="https://img.shields.io/badge/DS-blue">
           <img src="https://img.shields.io/badge/RL-olive"> <br>
           <span class="author_list"><u>Hongru WANG</u>, Huimin Wang, Zezhong Wang, Kam-Fai Wong </span> <br>
@@ -471,7 +471,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2006.09161"><strong>CUHK at SemEval-2020 Task 4: CommonSense Explanation, Reasoning and Prediction ..</strong></a>
+          <a href="https://arxiv.org/abs/2006.09161">CUHK at SemEval-2020 Task 4: CommonSense Explanation, Reasoning and Prediction ..</a>
           <img src="https://img.shields.io/badge/Other-red"> <br>
           <span class="author_list"><u>Hongru WANG</u>, Xiangru Tang, Sunny Lai, Kwong Sak Leung, Jia Zhu, Gabriel, and Kam-Fai WONG </span> <br>
           <span><i>SemEval of COLING 2020</i></span>
@@ -493,7 +493,7 @@
       <div class="col-12 col-lg-9">
          <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href=""><strong>UniMS-RAG: A Unified Multi-source RAG for Personalized Dialogue Systems</strong></a> 
+          <a href="">UniMS-RAG: A Unified Multi-source RAG for Personalized Dialogue Systems</a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Wenyu Huang, Yang Deng, et. al, Jeff Z Pan, Kam-Fai Wong </span> <br>
@@ -502,7 +502,7 @@
 
          <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2402.13514.pdf"><strong>Self-DC: When to retrieve and When to generate? Self Divide-and-Conquer for .. </strong></a> 
+          <a href="https://arxiv.org/abs/2402.13514.pdf">Self-DC: When to retrieve and When to generate? Self Divide-and-Conquer for ..</a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Boyang Xue, Baohang Zhou, et. al, Kam-fai Wong </span> <br>
@@ -511,7 +511,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2311.16789"><strong>A Survey of the Evolution of Language Model-Based Dialogue Systems </strong></a> 
+          <a href="https://arxiv.org/abs/2311.16789">A Survey of the Evolution of Language Model-Based Dialogue Systems </a> 
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Lingzhi Wang, Yiming Du, Liang Chen, Jingyan Zhou, Yufei Wang, Kam-Fai Wong </span> <br>
           <span> Under Review </span>
@@ -612,7 +612,7 @@
                         <p>
                           <!-- <img src="" alt="Logo" style="border:none;height:1.5rem;margin:0;padding:0"> -->
                           <strong>ByteDance</strong>
-                          <span style="float:right;margin-right:10em">Seed-LLM-Harizon (Doubao)</span>
+                          <span style="float:right;margin-right:5em">Seed-LLM-Harizon (Doubao)</span>
                           <br>
                           <span>Research Intern</span>
                         </p>
@@ -624,8 +624,26 @@
                       <span class="cvdate">2020.08&nbsp;-&nbsp;2021.09</span>
                       <p>
                         <!-- <img src="" alt="Logo" style="border:none;height:1.5rem;margin:0;padding:0"> -->
-                        <strong>The Chinese University of Hong Kong</strong>
+                        <strong>CUHK</strong>
+                        <span style="float:right;margin-right:5em">MoE Key Lab of High Conﬁdence Software Technologies</span>
+
+                        <br>
                         <span>Research Assistant</span>
+                      </p>
+                    </td>
+                  </tr>
+
+
+                  <tr>
+                    <td>
+                      <span class="cvdate">2019.04&nbsp;-&nbsp;2019.07</span>
+                      <p>
+                        <!-- <img src="" alt="Logo" style="border:none;height:1.5rem;margin:0;padding:0"> -->
+                        <strong>Kuaishou</strong>
+                        <span style="float:right;margin-right:5em">Music and Video Recommendation</span>
+
+                        <br>
+                        <span>Data Intern</span>
                       </p>
                     </td>
                   </tr>
