--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
       <blockquote>
 
-        My research focus revolves around reasoning and acting of personalized language agents, designed to seamlessly unifing them from tool perspective such as regarding reasoning as internal cognitive tools while acting as external physical tools instead of treat them in isolation. My long-term objective is to achieve the \textit{impossible triangle} between safety, personalization and autonomy of language agent. If you are interested in my research (more details can be found below), I dedicate 60 minutes per week to chat with persons from all over the world, feel free to say hi if you want to discuss or cooperate.
+        My research focus revolves around reasoning and acting of personalized language agents, designed to seamlessly unifing them from tool perspective such as regarding reasoning as internal cognitive tools while acting as external physical tools instead of treat them in isolation. My long-term objective is to achieve the <i>impossible triangle</i> between safety, personalization and autonomy of language agent. If you are interested in my research (more details can be found below), I dedicate 60 minutes per week to chat with persons from all over the world, feel free to say hi if you want to discuss or cooperate.
 
         <!-- Calendly link widget begin -->
         <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
@@ -393,7 +393,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://www.sciencedirect.com/science/article/pii/S0885230824000202"><strong>KddRES: A Multi-level Knowledge-driven Dialogue Dataset for Restaurant ..</strong></a>
+          <a href="https://www.sciencedirect.com/science/article/pii/S0885230824000202">KddRES: A Multi-level Knowledge-driven Dialogue Dataset for Restaurant ..</a>
           <img src="https://img.shields.io/badge/DS-blue"> <br>
           <span class="author_list"><u>Hongru WANG</u>, Wai-Chung Kwan, Min Li, Zimo Zhou, Kam-Fai Wong</span> <br>
           <span><i>Computer Speech and Language (SCI Q2, IF: 4.3)</i></span>
