--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
       <blockquote>
 
-        My research focus revolves around reasoning and acting of personalized language agents, designed to seamlessly unifing them from tool perspective such as regarding reasoning as internal cognitive tools while acting as external physical tools instead of treat them in isolation. My long-term objective is to achieve the <i>impossible triangle</i> between safety, personalization and autonomy of language agent. If you are interested in my research (more details can be found below), I dedicate 60 minutes per week to chat with persons from all over the world, feel free to say hi if you want to discuss or cooperate.
+        My research focus revolves around reasoning and acting of personalized language agents, designed to seamlessly unifing them from tool perspective such as regarding reasoning as internal cognitive tools while acting as external physical tools instead of treat them in isolation. My long-term objective is to achieve the <strong>''impossible triangle''</strong> between safety, personalization and autonomy of language agent. If you are interested in my research (more details can be found below), I dedicate 60 minutes per week to chat with persons from all over the world, feel free to say hi if you want to discuss or cooperate.
 
         <!-- Calendly link widget begin -->
         <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
@@ -404,7 +404,7 @@
           <a href="/papers/uniretriever/universal_retrieval.pdf">UniRetriever: Multi-task Candidates Selection for Various Context-Adaptive ..</a> 
           <img src="https://img.shields.io/badge/DS-blue">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
-          <span class="author_list"><u>Hongru WANG</u>, Boyang Xue, Baohang Zhou, Rui Wang, Fei Mi, Weichao Wang, Yasheng Wang, Kam-Fai Wong </span><br>
+          <span class="author_list"><u>Hongru WANG</u>, Boyang Xue, Baohang Zhou, et. al, Yasheng Wang, Kam-Fai Wong </span><br>
           <span><i>LREC-COLING 2024</i></span>
         </div>
 
