--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
       <div class="col-12 col-lg-8">
       
-      <h1>About Me <a href="/cv/hongru_cv.pdf" style="font-size: 20px;">CV</a></h1>
+      <h1>About Me <a href="/cv/Hongru_CUHK.pdf" style="font-size: 20px;">CV</a></h1>
 
       
       <p>I am currently a final-year Ph.D. Candidate at The Chinese University of Hong Kong (expected to graduate on July 2025, <strong>actively seeking postdoc positions</strong>), very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a>. Before that, I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. During my PhD, I am happy and honored to visit The University of Edinburgh (EdinburghNLP), working closely with <a href="https://knowledge-representation.org/j.z.pan/">Prof. Jeff Z. Pan</a> and <a href="https://scholar.google.it/citations?user=9sk6CSgAAAAJ&hl=it">Prof. Pasquale Minervini</a>. Besides that, I am co-founder and organizer of <a href="https://nice-nlp.github.io/">NLP Academic Exchange Platform (NICE)</a>, which provide a platform to share and discuss recent progress in NLP. &#x1F4DA;&#x1F4DA;&#x1F4DA;</p>
@@ -291,6 +291,8 @@
       <div class="col-12 col-lg-9">
 
         <ul>
+          <li>Sep 2024: One paper is accepted by <em>MINT Workshop@NeruIPS 2024</em>. This is a very interesting and insighful analysis paper about knowledge conflict.</li>
+
           <li>Sep 2024: One paper is accepted by <em>NeruIPS 2024</em>. Congratulations to all co-authors. This is my first paper at ML top conferences.</li>
 
           <li>Sep 2024: Fives papers are accepted by <em>EMNLP 2024</em> (3 main 2 findings), including my first-author work: AppBench. AppBench is the first benchmark focus on the execution of multiple APIs from various Apps (graph strcuture and persmission management). This is the future Apple Intelligence ! &#x1F525; &#x1F525; &#x1F525; </li>
