--- a/index.html
+++ b/index.html
@@ -678,6 +678,7 @@
   
       <div class="col-12 col-lg-9">
         <ul>
+          <li>Reaching Out Award (2023-2024)</li>
           <li>Overseas Research Attachment Programme (ORAP 2023-2024)</li>
           <li>Technology and Business Development Fund (TBF22ENG004)</li>
           <li>Top 1 at Online Safety Price organized by AI Singapore (WWW 2024)</li>
