--- a/publication/index.html
+++ b/publication/index.html
@@ -477,6 +477,14 @@
                 <div class="col-lg-12">
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                          <a href="">Analysing the Residual Stream of Language Models Under Knowledge Conflicts</a> 
+                          <img src="https://img.shields.io/badge/LLM-orange"> <br>
+                          <span class="author_list">ZYuZhao, XiaotangDu, et. al, <u>Hongru Wang</u>, Xuanli He, Kam-Fai Wong, Pasquale Minervini</span><br>
+                          <span><i>MINT Workshop, NeurIPS 2024</i></span>
+                        </div>
+
+                        <div class="pub-list-item" style="margin-bottom: 1rem">
+                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                           <a href=""> Fine-tuning after Prompting: an Explainable Way for Classification</a> 
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
                           <span class="author_list">Zezhong Wang, Luyao Ye, <u>Hongru WANG</u>, Boyang Xue, Yiming Du, Bin Liang, and Kam-Fai Wong</span><br>
