--- a/index.html
+++ b/index.html
@@ -364,6 +364,8 @@
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><u>Hongru WANG</u>, Rui Wang, Boyang XUE, Heming Xia, Jingtao Cao, Zeming Liu, Jeff Z. Pan, Kam-Fai Wong </span> <br>
           <span><i>EMNLP 2024</i></span> (apple intelligence, graph execution, permission management)
+          <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/AppBench" target="_blank" rel="noopener"> Code </a>
+          <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/appbench/appbench_poster.pdf" target="_blank" rel="noopener"> Poster </a>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
