update aaai and reaching out

--- a/publication/index.html
+++ b/publication/index.html
@@ -479,7 +479,7 @@
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                           <a href="">Analysing the Residual Stream of Language Models Under Knowledge Conflicts</a> 
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
-                          <span class="author_list">ZYuZhao, XiaotangDu, et. al, <u>Hongru Wang</u>, Xuanli He, Kam-Fai Wong, Pasquale Minervini</span><br>
+                          <span class="author_list">Yu Zhao, Xiaotang Du, et. al, <u>Hongru Wang</u>, Xuanli He, Kam-Fai Wong, Pasquale Minervini</span><br>
                           <span><i>MINT Workshop, NeurIPS 2024</i></span>
                         </div>
 
