--- a/talk/index.html
+++ b/talk/index.html
@@ -137,6 +137,13 @@
                             <li>TechBeat, Oct 2024 (Apple Intelligence, o1-like reasoning)</li>
                         </ul>
                     </ul>
+
+                    <ul>
+                        <li>AppBench: Planningof MultipleAPIsfromVarious APPs forComplexUser Instruction</li>
+                        <ul>
+                            <li>AI Time, Oct 2024 (Apple Intelligence)</li>
+                        </ul>
+                    </ul>
                 
                 </div>
             </div>
