--- a/publication/index.html
+++ b/publication/index.html
@@ -148,7 +148,7 @@
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                      <a href="">AppBench: Planning of Multiple APIs from Various APPs for Complex User Instruction</a> 
+                      <a href="https://arxiv.org/abs/2410.19743.pdf">AppBench: Planning of Multiple APIs from Various APPs for Complex User Instruction</a> 
                       <img src="https://img.shields.io/badge/LLM-orange">
                       <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
                       <span class="author_list"><u>Hongru WANG</u>, Rui Wang, Boyang XUE, Heming Xia, Jingtao Cao, Zeming Liu, Jeff Z. Pan, Kam-Fai Wong </span> <br>
