--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       <h1>About Me <a href="/cv/hongru_cv.pdf" style="font-size: 20px;">CV</a></h1>
 
       
-      <p>I am currently a final-year Ph.D. Candidate at The Chinese University of Hong Kong (expected to graduate on July 2025, <strong>actively seeking postdoc positions</strong>), very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a>. Before that, I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. During my PhD, I am happy and honored to visit The University of Edinburgh (EdinburghNLP), working closely with <a href="https://knowledge-representation.org/j.z.pan/">Prof. Jeff Z. Pan</a> and <a href="https://scholar.google.it/citations?user=9sk6CSgAAAAJ&hl=it">Prof. Pasquale Minervini</a>. Besides that, I am co-founder and organizer of <a href="https://nice-nlp.github.io/">NLP Academic Exchange Platform (NICE)</a>, which provide a platform to share and discuss recent progress in NLP. &#x1F4DA;&#x1F4DA;&#x1F4DA;</p>
+      <p>I am currently a final-year Ph.D. Candidate at The Chinese University of Hong Kong (expected to graduate on July 2025, <strong><span style="color:#bf0140;">actively seeking postdoc positions</span></strong>), very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a>. Before that, I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. During my PhD, I am happy and honored to visit The University of Edinburgh (EdinburghNLP), working closely with <a href="https://knowledge-representation.org/j.z.pan/">Prof. Jeff Z. Pan</a> and <a href="https://scholar.google.it/citations?user=9sk6CSgAAAAJ&hl=it">Prof. Pasquale Minervini</a>. Besides that, I am co-founder and organizer of <a href="https://nice-nlp.github.io/">NLP Academic Exchange Platform (NICE)</a>, which provide a platform to share and discuss recent progress in NLP. &#x1F4DA;&#x1F4DA;&#x1F4DA;</p>
 
 
       <!-- <br> -->
@@ -359,7 +359,7 @@
       -->
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="">AppBench: Planning of Multiple APIs from Various APPs for Complex Instruction</a> 
+          <a href="https://arxiv.org/abs/2410.19743.pdf">AppBench: Planning of Multiple APIs from Various APPs for Complex Instruction</a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><u>Hongru WANG</u>, Rui Wang, Boyang XUE, Heming Xia, Jingtao Cao, Zeming Liu, Jeff Z. Pan, Kam-Fai Wong </span> <br>
