--- a/publication/index.html
+++ b/publication/index.html
@@ -139,7 +139,7 @@
                 <div class="col-lg-12">
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                      <a href="https://arxiv.org/abs/2405.16802.pdf">AutoCV: Empowering Reasoning with Automated Process Labeling via Confidence Variation</a> 
+                      <a href="https://arxiv.org/abs/2405.16802.pdf">AutoPSV: Automated Process-Supervised Verifier</a> 
                       <img src="https://img.shields.io/badge/LLM-orange"><br>
                       <span class="author_list">Jianqiao Lu, Zhiyang Dou, <u>Hongru WANG</u>, Zeyu Cao, Jianbo Dai, Yingjia Wan, Yinya Huang, Zhijiang Guo </span> <br>
                       <span><i>NeruIPS 2024</i></span>
