--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
       
       <h1>About Me 
 
-        <a href="/cv/hongru_cv.pdf" style="font-size: 20px;">CV</a> 
-        <a href="/cv/research_statement.pdf" style="font-size: 20px;">Research Statement</a>
-        <a href="/cv/teaching_statement.pdf" style="font-size: 20px;">Teaching Statement</a>
+        <a href="/cv/Hongru_CUHK.pdf" style="font-size: 20px;">CV</a> 
+        <a href="/cv/RS_One.pdf" style="font-size: 20px;">Research Statement</a>
+        <a href="/cv/TS.pdf" style="font-size: 20px;">Teaching Statement</a>
       </h1>
 
       
