--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       
       <h1>About Me 
 
-        <a href="/cv/Hongru_CUHK.pdf" style="font-size: 20px;">CV</a> 
+        <a href="/cv/Hongru.pdf" style="font-size: 20px;">CV</a> 
         <a href="/cv/RS_One.pdf" style="font-size: 20px;">Research Statement</a>
         <a href="/cv/TS.pdf" style="font-size: 20px;">Teaching Statement</a>
       </h1>
