--- a/publication/index.html
+++ b/publication/index.html
@@ -142,7 +142,7 @@
                       <a href="https://arxiv.org/abs/2405.16802.pdf">AutoPSV: Automated Process-Supervised Verifier</a> 
                       <img src="https://img.shields.io/badge/LLM-orange"><br>
                       <span class="author_list">Jianqiao Lu, Zhiyang Dou, <u>Hongru WANG</u>, Zeyu Cao, Jianbo Dai, Yingjia Wan, Yinya Huang, Zhijiang Guo </span> <br>
-                      <span><i>NeruIPS 2024</i></span>
+                      <span><i>NeurIPS 2024</i></span>
                     </div>
 
 
