--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       
       <h1>About Me 
 
-        <a href="/cv/Hongru.pdf" style="font-size: 20px;">CV</a> 
+        <a href="/cv/Hongru_CUHK.pdf" style="font-size: 20px;">CV</a> 
         <a href="/cv/RS_One.pdf" style="font-size: 20px;">Research Statement</a>
         <a href="/cv/TS.pdf" style="font-size: 20px;">Teaching Statement</a>
       </h1>
@@ -296,9 +296,9 @@
       <div class="col-12 col-lg-9">
 
         <ul>
-          <li>Sep 2024: One paper is accepted by <em>MINT Workshop@NeruIPS 2024</em>. This is a very interesting and insighful analysis paper about knowledge conflict.</li>
+          <li>Sep 2024: One paper is accepted by <em>MINT Workshop@NeurIPS 2024</em>. This is a very interesting and insighful analysis paper about knowledge conflict.</li>
 
-          <li>Sep 2024: One paper is accepted by <em>NeruIPS 2024</em>. Congratulations to all co-authors. This is my first paper at ML top conferences.</li>
+          <li>Sep 2024: One paper is accepted by <em>NeurIPS 2024</em>. Congratulations to all co-authors. This is my first paper at ML top conferences.</li>
 
           <li>Sep 2024: Fives papers are accepted by <em>EMNLP 2024</em> (3 main 2 findings), including my first-author work: AppBench. AppBench is the first benchmark focus on the execution of multiple APIs from various Apps (graph strcuture and persmission management). This is the future Apple Intelligence ! &#x1F525; &#x1F525; &#x1F525; </li>
 
