--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       
       <h1>About Me 
 
-        <a href="/cv/Hongru_CUHK.pdf" style="font-size: 20px;">CV</a> 
+        <a href="/cv/Hongru_CV.pdf" style="font-size: 20px;">CV</a> 
         <a href="/cv/RS_One.pdf" style="font-size: 20px;">Research Statement</a>
         <a href="/cv/TS.pdf" style="font-size: 20px;">Teaching Statement</a>
       </h1>
@@ -497,6 +497,14 @@
       <div class="col-12 col-lg-3 section-heading">
         <h1>Preprint</h1>
         <p>Draft and Under Review</p>
+      </div>
+
+      <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="https://arxiv.org/abs/2402.13606">MlingConf: AComprehensiveStudy of Multilingual Confidence Estimation on LLMs </a> 
+          <img src="https://img.shields.io/badge/LLM-orange"> <br>
+          <span class="author_list">Boyang Xue*, <u>Hongru Wang*</u>, RuiWang, et al.,BinLiang, Kam-Fai Wong</span> <br>
+          <span> Under Review </span>
       </div>
       
       <div class="col-12 col-lg-9">
