--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       
       <h1>About Me 
 
-        <a href="/cv/Hongru_CV.pdf" style="font-size: 20px;">CV</a> 
+        <a href="/cv/HongruWang_CUHK.pdf" style="font-size: 20px;">CV</a> 
         <a href="/cv/RS_One.pdf" style="font-size: 20px;">Research Statement</a>
         <a href="/cv/TS.pdf" style="font-size: 20px;">Teaching Statement</a>
       </h1>
@@ -296,6 +296,8 @@
       <div class="col-12 col-lg-9">
 
         <ul>
+          <li>Dec 2024: Start my visiting at BLENDER Lab University of Illinois Urbana-Champaign hosted by Prof. Heng Ji. It is also the final period of my Ph.D. study.</li>
+
           <li>Sep 2024: One paper is accepted by <em>MINT Workshop@NeurIPS 2024</em>. This is a very interesting and insighful analysis paper about knowledge conflict.</li>
 
           <li>Sep 2024: One paper is accepted by <em>NeurIPS 2024</em>. Congratulations to all co-authors. This is my first paper at ML top conferences.</li>
