--- a/publication/index.html
+++ b/publication/index.html
@@ -128,13 +128,57 @@
         </div>
 
         <div class="universal-wrapper pt-3">
-          <h3>2024 <button class="toggle-all-btn">Hide All</button></h3>
+          <h3>2025 <button class="toggle-all-btn">Hide All</button></h3>
 
           <button class="toggle-btn">
             <span class="pub-details-toggle"></span>
           </button>
           
           <div class="universal-wrapper" style="display: block;">
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">SeqAR: Jailbreak LLMs with Sequential Auto-Generated Characters</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <span class="author_list">Yan Yang, Xin Lu, <u>Hongru WANG</u>, et al., Guanhua Chen, Yun Chen</span> <br>
+                      <span><i>NAACL 2025</i></span> 
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">Steering Knowledge Selection Behaviours in LLMs via SAE-Based Representation Engineering</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <span class="author_list">YuZhao, et al., <u>Hongru WANG</u>, Xuanli He, Kam-Fai Wong, Pasquale Minervini</span> <br>
+                      <span><i>NAACL 2025</i></span> (tool conflicts with each other, how to detect and control the behaviors)
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="https://arxiv.org/abs/2402.13514.pdf">Self-DC: When to retrieve and When to generate? Self Divide-and-Conquer for ..</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange">
+                      <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
+                      <span class="author_list"><u>Hongru Wang</u>, Boyang Xue, Baohang Zhou, et. al, Kam-fai Wong </span> <br>
+                      <span><i>NAACL 2025</i></span> (tool management regarding internal tools and external tools)
+                    </div>
+
+                </div>
+            </div>
+          </div>
+
+
+        </div>
+
+
+        <div class="universal-wrapper pt-3">
+          <h3>2024 <button class="toggle-all-btn">Show All</button></h3>
+
+          <button class="toggle-btn">
+            <span class="pub-details-toggle"></span>
+          </button>
+          
+          <div class="universal-wrapper" style="display: none;">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="pub-list-item" style="margin-bottom: 1rem">
