--- a/publication/index.html
+++ b/publication/index.html
@@ -640,6 +640,20 @@
             font-weight: bold;
           }
 
+          .twentyfour-toggle-btn {
+            display: flex;
+            align-items: center;
+            background-color: transparent;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+            text-align: left;
+          }
+
+          .twentyfour-toggle-btn.active {
+            font-weight: bold;
+          }
+
           .twentythree-toggle-btn {
             display: flex;
             align-items: center;
