--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       </h1>
 
       
-      <p>I am currently a final-year Ph.D. Candidate at The Chinese University of Hong Kong (expected to graduate on July 2025, <strong><span style="color:#bf0140;">actively seeking postdoc positions</span></strong>), very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a>. Before that, I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. During my PhD, I am happy and honored to visit The University of Edinburgh (EdinburghNLP), working closely with <a href="https://knowledge-representation.org/j.z.pan/">Prof. Jeff Z. Pan</a> and <a href="https://scholar.google.it/citations?user=9sk6CSgAAAAJ&hl=it">Prof. Pasquale Minervini</a>. Besides that, I am co-founder and organizer of <a href="https://nice-nlp.github.io/">NLP Academic Exchange Platform (NICE)</a>, which provide a platform to share and discuss recent progress in NLP. &#x1F4DA;&#x1F4DA;&#x1F4DA;</p>
+      <p>I am currently a final-year Ph.D. Candidate at The Chinese University of Hong Kong (expected to graduate on July 2025, <strong><span style="color:#bf0140;">actively seeking postdoc positions</span></strong>), very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a>. Before that, I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. During my PhD, I am happy and honored to visit The University of Edinburgh (EdinburghNLP) and University of Illinois Urbana-Champaign (BlenderLab), working closely with <a href="https://knowledge-representation.org/j.z.pan/">Prof. Jeff Z. Pan</a>, <a href="https://scholar.google.it/citations?user=9sk6CSgAAAAJ&hl=it">Prof. Pasquale Minervini</a> and <a href="https://scholar.google.com/citations?user=z7GCqT4AAAAJ&hl=en">Prof. Heng Ji</a>. Besides that, I am co-founder and organizer of <a href="https://nice-nlp.github.io/">NLP Academic Exchange Platform (NICE)</a>, which provide a platform to share and discuss recent progress in NLP. &#x1F4DA;&#x1F4DA;&#x1F4DA;</p>
 
 
       <!-- <br> -->
@@ -744,7 +744,7 @@
 
       <div class="col-12 col-lg-9">
         <ul>
-          <li>love for my girlfriend: <a href="tools/ValentinesDay-master/index.html">a gift</a> &#127873;</li>
+          <!-- <li>love for my girlfriend: <a href="tools/ValentinesDay-master/index.html">a gift</a> &#127873;</li> -->
           <li>CUHK SEEM QE (IS and OR Track): <a href="https://github.com/LingweiMeng/QualifyingExamPreparing">All you need!</a></li>
           <li>A tool to short your bib file: <a href="https://github.com/ruleGreen/shortbiber">shortbiber</a> </li>
           <li>More tools can be found in <a href="https://rulegreen.github.io/resources/">resources</a></li>
