--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
       <div class="col-12 col-lg-4">
         <div id="profile">
-          <img class="avatar avatar-circle" src="/author/hongru-wang/profile2.jpg" alt="Hongru WANG">
+          <img class="avatar avatar-circle" src="/author/hongru-wang/profile_emnlp.jpg" alt="Hongru WANG">
           <img src="/author/hongru-wang/signature.png"  style="width:60%;margin-left:20px;margin-top:20px;" alt="Hongru WANG">
           
           <div class="portrait-title">
@@ -343,11 +343,12 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2402.13514.pdf">Self-DC: When to retrieve and When to generate? Self Divide-and-Conquer for ..</a> 
+          <a href="https://arxiv.org/abs/2402.13514.pdf">Self-DC: When to Reason and When to Act? Self Divide-and-Conquer for ..</a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Boyang Xue, Baohang Zhou, et. al, Kam-fai Wong </span> <br>
-          <span><i>NAACL 2025</i></span> (tool management regarding internal tools and external tools)
+          <span><i>NAACL 2025</i></span> (self-aware knowledge boundary to manage tool calls)
+          <span><strong style="color:#bf0140">Oral</strong></span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -411,7 +412,8 @@
           <img src="https://img.shields.io/badge/MM-red"> 
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list"><u>Hongru WANG*</u>, Baohang Zhou*, Zhengkun Zhang, Yiming Du, David Ho, Kam-Fai Wong </span><br>
-          <span><i>ICASSP 2024</i></span> (using ChatGPT to edit video) <strong style="color:#bf0140"> (oral) </strong>
+          <span><i>ICASSP 2024</i></span> (using ChatGPT to edit video) 
+          <span><strong style="color:#bf0140">Oral</strong></span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -444,7 +446,8 @@
           <a href="https://arxiv.org/abs/2108.11635">MCML: A Novel Memory-based Contrastive Meta-Learning Method for Few Shot Slot Tagging</a>
           <img src="https://img.shields.io/badge/DS-blue"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Zezhong Wang, Wai-Chung Kwan, Kam-Fai Wong </span> <br>
-          <span><i>IJCNLP-AACL 2023</i> <strong style="color:#bf0140"> (oral) </strong></span>
+          <span><i>IJCNLP-AACL 2023</i></span>
+          <span><strong style="color:#bf0140">Oral</strong></span>
         </div>
 
 
