--- a/publication/index.html
+++ b/publication/index.html
@@ -140,10 +140,12 @@
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                      <a href="">SeqAR: Jailbreak LLMs with Sequential Auto-Generated Characters</a> 
-                      <img src="https://img.shields.io/badge/LLM-orange"><br>
-                      <span class="author_list">Yan Yang, Xin Lu, <u>Hongru WANG</u>, et al., Guanhua Chen, Yun Chen</span> <br>
-                      <span><i>NAACL 2025</i></span> 
+                      <a href="https://arxiv.org/abs/2402.13514.pdf">Self-DC: When to Reason and When to Act? Self Divide-and-Conquer for ..</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange">
+                      <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
+                      <span class="author_list"><u>Hongru Wang</u>, Boyang Xue, Baohang Zhou, et. al, Kam-fai Wong </span> <br>
+                      <span><i>NAACL 2025</i></span> (tool management regarding internal tools and external tools)
+                      <span><strong style="color:#bf0140">Oral</strong></span>
                     </div>
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -152,15 +154,16 @@
                       <img src="https://img.shields.io/badge/LLM-orange"><br>
                       <span class="author_list">YuZhao, et al., <u>Hongru WANG</u>, Xuanli He, Kam-Fai Wong, Pasquale Minervini</span> <br>
                       <span><i>NAACL 2025</i></span> (tool conflicts with each other, how to detect and control the behaviors)
+                      <span><strong style="color:#bf0140">Oral</strong></span>
                     </div>
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                      <a href="https://arxiv.org/abs/2402.13514.pdf">Self-DC: When to retrieve and When to generate? Self Divide-and-Conquer for ..</a> 
-                      <img src="https://img.shields.io/badge/LLM-orange">
-                      <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
-                      <span class="author_list"><u>Hongru Wang</u>, Boyang Xue, Baohang Zhou, et. al, Kam-fai Wong </span> <br>
-                      <span><i>NAACL 2025</i></span> (tool management regarding internal tools and external tools)
+                      <a href="">SeqAR: Jailbreak LLMs with Sequential Auto-Generated Characters</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <span class="author_list">Yan Yang, Xin Lu, <u>Hongru WANG</u>, et al., Guanhua Chen, Yun Chen</span> <br>
+                      <span><i>NAACL 2025</i></span> 
+
                     </div>
 
                 </div>
