--- a/publication/index.html
+++ b/publication/index.html
@@ -144,7 +144,7 @@
                       <img src="https://img.shields.io/badge/LLM-orange">
                       <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
                       <span class="author_list"><u>Hongru Wang</u>, Boyang Xue, Baohang Zhou, et. al, Kam-fai Wong </span> <br>
-                      <span><i>NAACL 2025</i></span> (tool management regarding internal tools and external tools)
+                      <span><i>NAACL 2025</i></span> (tool management regarding internal tools and external tools) <br>
                       <span><strong style="color:#bf0140">Oral</strong></span>
                     </div>
 
@@ -153,7 +153,7 @@
                       <a href="">Steering Knowledge Selection Behaviours in LLMs via SAE-Based Representation Engineering</a> 
                       <img src="https://img.shields.io/badge/LLM-orange"><br>
                       <span class="author_list">YuZhao, et al., <u>Hongru WANG</u>, Xuanli He, Kam-Fai Wong, Pasquale Minervini</span> <br>
-                      <span><i>NAACL 2025</i></span> (tool conflicts with each other, how to detect and control the behaviors)
+                      <span><i>NAACL 2025</i></span> (tool conflicts with each other, how to detect and control the behaviors) <br>
                       <span><strong style="color:#bf0140">Oral</strong></span>
                     </div>
 
