--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Boyang Xue, Baohang Zhou, et. al, Kam-fai Wong </span> <br>
-          <span><i>NAACL 2025</i></span> (self-aware knowledge boundary to manage tool calls)
+          <span><i>NAACL 2025</i></span> (self-aware knowledge boundary to manage tool calls) <br>
           <span><strong style="color:#bf0140">Oral</strong></span>
         </div>
 
@@ -412,7 +412,7 @@
           <img src="https://img.shields.io/badge/MM-red"> 
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list"><u>Hongru WANG*</u>, Baohang Zhou*, Zhengkun Zhang, Yiming Du, David Ho, Kam-Fai Wong </span><br>
-          <span><i>ICASSP 2024</i></span> (using ChatGPT to edit video) 
+          <span><i>ICASSP 2024</i></span> (using ChatGPT to edit video) <br>
           <span><strong style="color:#bf0140">Oral</strong></span>
         </div>
 
@@ -446,7 +446,7 @@
           <a href="https://arxiv.org/abs/2108.11635">MCML: A Novel Memory-based Contrastive Meta-Learning Method for Few Shot Slot Tagging</a>
           <img src="https://img.shields.io/badge/DS-blue"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Zezhong Wang, Wai-Chung Kwan, Kam-Fai Wong </span> <br>
-          <span><i>IJCNLP-AACL 2023</i></span>
+          <span><i>IJCNLP-AACL 2023</i></span> <br>
           <span><strong style="color:#bf0140">Oral</strong></span>
         </div>
 
