update oral info

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
           <span class="author_list"><u>Hongru Wang</u>, Boyang Xue, Baohang Zhou, et. al, Kam-fai Wong </span> <br>
           <span><i>NAACL 2025</i></span> (self-aware knowledge boundary to manage tool calls) <br>
-          <span><strong style="color:#bf0140">Oral</strong></span>
+          <span><strong style="color:#bf0140">Oral = 246 / 3185 ~= 7.7%</strong></span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
