--- a/publication/index.html
+++ b/publication/index.html
@@ -145,7 +145,7 @@
                       <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
                       <span class="author_list"><u>Hongru Wang</u>, Boyang Xue, Baohang Zhou, et. al, Kam-fai Wong </span> <br>
                       <span><i>NAACL 2025</i></span> (tool management regarding internal tools and external tools) <br>
-                      <span><strong style="color:#bf0140">Oral</strong></span>
+                      <span><strong style="color:#bf0140">Oral = 246 / 3185 ~= 7.7% </strong></span>
                     </div>
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -154,7 +154,7 @@
                       <img src="https://img.shields.io/badge/LLM-orange"><br>
                       <span class="author_list">YuZhao, et al., <u>Hongru WANG</u>, Xuanli He, Kam-Fai Wong, Pasquale Minervini</span> <br>
                       <span><i>NAACL 2025</i></span> (tool conflicts with each other, how to detect and control the behaviors) <br>
-                      <span><strong style="color:#bf0140">Oral</strong></span>
+                      <span><strong style="color:#bf0140">Oral = 246 / 3185 ~= 7.7% </strong></span>
                     </div>
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
